--- a/project1.Rmd
+++ b/project1.Rmd
@@ -29,15 +29,15 @@ output:
 
 4.  What level of complexity of the final product are you aiming for?
 
-    -   We have not discussed this yet as a team
+    -   Closer to MVP due to other commitments
 
 5.  What figures / tables do you anticipate producing?
 
-    -   We have not discussed this yet, but some ideas are:
+    -   A line plot of weather and COVID cases over time for a specific location on the same axis, maybe faceted or color-coded by different regions
 
-    -   A line plot of weather and COVID cases on the same axis, maybe faceted or color-coded by different regions
+    -   Scatter plot of weather comfortable-ness vs COVID cases 2 weeks later (possibly for a specific time)
 
-    -   A line plot of how comfortable outside weather is, vs COVID cases, with an R value
+    -   We don't have any specific table ideas yet
 
 <!-- -------------------------------------------------- -->
 
@@ -96,8 +96,7 @@ Follow instructions linked [here](https://docs.ropensci.org/rnoaa/articles/rnoaa
 library('rnoaa')
 # Replace with your key from here: https://www.ncdc.noaa.gov/cdo-web/token
 # Remember to delete your actual API key before git pushing!
-# options(noaakey = "YOUR_API-KEY")
-options(noaakey = "NyqQflFurAAevqdjCxMUedSgCKwybJWj")
+options(noaakey = "YOUR_API-KEY")
 ```
 
 I have not been able to figure out a way to just set everything equal to a data frame. It seems like you need to make calls for a specific location using the functions.
