--- a/project1.Rmd
+++ b/project1.Rmd
@@ -63,8 +63,10 @@ See the README.md file for instructions to download this data from the Census Bu
 filename <- "./data/census.csv"
 
 ## Load the data
-df_pop <- read_csv(filename, skip = 1)
-df_pop %>% knitr::kable()
+df_pop <- 
+  read_csv(filename, skip = 1) %>% 
+  mutate("fips" = str_remove(id, "\\d+[:alpha:]+"))
+# df_pop %>% knitr::kable()
 ```
 
 ### Automated Download of NYT Data
@@ -85,8 +87,65 @@ curl::curl_download(
 ## Loads the downloaded csv
 df_covid <- read_csv(filename_nyt)
 ```
+```{r glimpse}
+df_pop %>% glimpse
+df_covid %>% glimpse
+```
 
-Re-running this code will pull the most recent version of the NY Times data.
+
+```{r combine}
+## NOTE: No need to change; run this to produce a more convenient tibble
+df_data <-
+  df_covid %>%
+  inner_join(df_pop, by = "fips") %>% 
+  select(
+    date,
+    county,
+    state,
+    fips,
+    cases,
+    deaths,
+    population = `Estimate!!Total`
+  )
+glimpse(df_data)
+```
+
+
+#### Normalize
+
+```{r normalize}
+## TASK: Normalize cases and deaths
+df_normalized <-
+  df_data %>%
+  group_by(county) %>%
+  mutate("cases_per100k" = (cases / population) * 100000) %>%
+  mutate("deaths_per100k" = (deaths / population) * 100000) %>%
+  ungroup()
+
+glimpse(df_normalized)
+```
+```{r tidy}
+df_tidy <- df_normalized %>% 
+  separate(date,
+           into = c("year", "month", "day"),
+           sep = "-", 
+           remove = FALSE) %>% 
+  mutate(year = as.integer(year), 
+         month = as.integer(month), 
+         day = as.integer(day))
+
+df_tidy
+```
+
+```{r daily}
+df_daily <- df_tidy %>% 
+  group_by(fips) %>% 
+  mutate(
+    daily_case_count = cases_per100k - lag(cases_per100k),
+    daily_death_count = deaths_per100k - lag(deaths_per100k)
+  )
+                                           
+```
 
 ### Weather Data
 
@@ -103,7 +162,7 @@ I have not been able to figure out a way to just set everything equal to a data 
 
 Once that is figured out, we need to connect the datasets using location and time. I think there should be some way to connect them using the ZIP (each county has 1 FIPS but can have multiple ZIP codes, however, we could probably find a lookup table of FIPS -\> ZIP in order to connect the 2 tables). If not, the location ID also uses the FIPS.
 ```{r}
-test_function <- 
+get_weather_data <- 
   function(FIPS) {
     out <- ncdc(
     datasetid='GHCND', # Daily summaries dataset
@@ -113,7 +172,7 @@ test_function <-
     enddate = '2020-12-31' ,
     limit = 1000 
   )
-  out$data
+  out
   }
 ```
 
@@ -122,18 +181,11 @@ test_function <-
 # ncdc_stations(datasetid='GHCND', locationid='FIPS:12017', stationid='GHCND:USC00084289')
 
 # Little plot example
-out <- ncdc(
-    datasetid='GHCND', # Daily summaries dataset
-    locationid='FIPS:22071',
-    # stationid='GHCND:USC00190120', # dataset:stationid, this is Amherst, MA
-    datatypeid='TAVG', # can be PRCP (precipitation), TMAX, TMIN, or TAVG(sometimes)
-    startdate = '2020-01-01', 
-    enddate = '2020-12-31' ,
-    limit = 1000 # I think number of datapoints, but it is weird
-  )
+out <- get_weather_data("22071")
 
 out
 ```
+
 ```{r}
 out$data %>% 
   mutate(date = lubridate::ymd_hms(date)) %>% 
@@ -154,157 +206,32 @@ stations <-
 stations
 ```
 
+## Plot Single County
+```{r}
+county_fips = '22071'
+weather_data <- get_weather_data(county_fips)$data %>% 
+  mutate(date = as.Date(date)) 
+covid_data <- df_daily %>% filter(fips == county_fips)
+```
+
+
+```{r}
+combined_data <- covid_data %>%
+  inner_join(weather_data, by = "date")
+```
+
+
+```{r}
+combined_data %>% 
+  ggplot(aes(x = date)) +
+  geom_point(mapping = aes(y = value, color = "Temperature")) +
+  geom_smooth(mapping = aes(y = value, color = "Temperature"))+
+  geom_point(mapping = aes(y = daily_case_count, color = "Daily Cases")) 
+  # geom_smooth() 
+
+```
+
+
 # Join the Data
 
 <!-- -------------------------------------------------- -->
-
-```{r glimpse}
-df_pop %>% glimpse
-df_covid %>% glimpse
-```
-
-Use [FIPS county codes](https://en.wikipedia.org/wiki/FIPS_county_code) to join datasets. The last `5` digits of the `id` column in `df_pop` is the FIPS county code, while the NYT data `df_covid` already contains the `fips`.
-
-```{r q3-task}
-df_q3 <- 
-  df_pop %>%
-  mutate("fips" = str_remove(id, "\\d+[:alpha:]+"))
-glimpse(df_q3)
-```
-
-Use the following test to check your answer.
-
-```{r q3-tests}
-## NOTE: No need to change this
-## Check known county
-assertthat::assert_that(
-              (df_q3 %>%
-              filter(str_detect(`Geographic Area Name`, "Autauga County")) %>%
-              pull(fips)) == "01001"
-            )
-print("Very good!")
-```
-
-### **q4** Join `df_covid` with `df_q3` by the `fips` column. Use the proper type of join to preserve *only* the rows in `df_covid`.
-
-```{r q4-task}
-## TASK: Join df_covid and df_q3 by fips.
-df_q4 <- 
-  df_covid %>%
-  inner_join(df_q3, by = "fips")
-glimpse(df_q4)
-```
-
-For convenience, I down-select some columns and produce more convenient column names.
-
-```{r rename}
-## NOTE: No need to change; run this to produce a more convenient tibble
-df_data <-
-  df_q4 %>%
-  select(
-    date,
-    county,
-    state,
-    fips,
-    cases,
-    deaths,
-    population = `Estimate!!Total`
-  )
-glimpse(df_data)
-```
-
-# Analyze
-
-<!-- -------------------------------------------------- -->
-
-Now that we've done the hard work of loading and wrangling the data, we can finally start our analysis. Our first step will be to produce county population-normalized cases and death counts. Then we will explore the data.
-
-## Normalize
-
-<!-- ------------------------- -->
-
-### **q5** Use the `population` estimates in `df_data` to normalize `cases` and `deaths` to produce per 100,000 counts [3]. Store these values in the columns `cases_per100k` and `deaths_per100k`.
-
-```{r q5-task}
-## TASK: Normalize cases and deaths
-df_normalized <-
-  df_data %>%
-  group_by(county) %>%
-  mutate("cases_per100k" = (cases / population) * 100000) %>%
-  mutate("deaths_per100k" = (deaths / population) * 100000) %>%
-  ungroup()
-
-glimpse(df_normalized)
-```
-
-You may use the following test to check your work.
-
-```{r q5-tests}
-## NOTE: No need to change this
-## Check known county data
-if (any(df_normalized %>% pull(date) %>% str_detect(., "2020-01-21"))) {
-  assertthat::assert_that(TRUE)
-} else {
-  print(str_c(
-    "Date 2020-01-21 not found; did you download the historical data (correct),",
-    "or just the most recent data (incorrect)?",
-    sep = " "
-  ))
-  assertthat::assert_that(FALSE)
-}
-
-assertthat::assert_that(
-              abs(df_normalized %>%
-               filter(
-                 str_detect(county, "Snohomish"),
-                 date == "2020-01-21"
-               ) %>%
-              pull(cases_per100k) - 0.127) < 1e-3
-            )
-assertthat::assert_that(
-              abs(df_normalized %>%
-               filter(
-                 str_detect(county, "Snohomish"),
-                 date == "2020-01-21"
-               ) %>%
-              pull(deaths_per100k) - 0) < 1e-3
-            )
-
-print("Excellent!")
-```
-
-## EDA
-
-<!-- ------------------------- -->
-
-### Aside: Some visualization tricks
-
-<!-- ------------------------- -->
-
-These data get a little busy, so it's helpful to know a few `ggplot` tricks to help with the visualization. Here's an example focused on Massachusetts.
-
-```{r ma-example}
-## NOTE: No need to change this; just an example
-df_normalized %>%
-  filter(state == "Massachusetts") %>%
-
-  ggplot(
-    aes(date, cases_per100k, color = fct_reorder2(county, date, cases_per100k))
-  ) +
-  geom_line() +
-  scale_y_log10(labels = scales::label_number_si()) +
-  scale_color_discrete(name = "County") +
-  theme_minimal() +
-  labs(
-    x = "Date",
-    y = "Cases (per 100,000 persons)"
-  )
-```
-
-*Tricks*:
-
--   I use `fct_reorder2` to *re-order* the color labels such that the color in the legend on the right is ordered the same as the vertical order of rightmost points on the curves. This makes it easier to reference the legend.
--   I manually set the `name` of the color scale in order to avoid reporting the `fct_reorder2` call.
--   I use `scales::label_number_si` to make the vertical labels more readable.
--   I use `theme_minimal()` to clean up the theme a bit.
--   I use `labs()` to give manual labels.
