--- a/project1.Rmd
+++ b/project1.Rmd
@@ -88,95 +88,21 @@ df_covid <- read_csv(filename_nyt)
 
 Re-running this code will pull the most recent version of the NY Times data.
 
-### Weather Data
+### Join COVID and Census data
 
-Follow instructions linked [here](https://docs.ropensci.org/rnoaa/articles/rnoaa.html)
+Also normalize COVID Data by cases per 100k
 
-```{r weather-data-setup}
-library('rnoaa')
-# Replace with your key from here: https://www.ncdc.noaa.gov/cdo-web/token
-# Remember to delete your actual API key before git pushing!
-options(noaakey = "YOUR_API-KEY")
-```
-
-I have not been able to figure out a way to just set everything equal to a data frame. It seems like you need to make calls for a specific location using the functions.
-
-Once that is figured out, we need to connect the datasets using location and time. I think there should be some way to connect them using the ZIP (each county has 1 FIPS but can have multiple ZIP codes, however, we could probably find a lookup table of FIPS -\> ZIP in order to connect the 2 tables). If not, the location ID also uses the FIPS.
-
-```{r weather-data}
-# ncdc_locs(locationcategoryid='ZIP', sortfield='name', sortorder='desc')
-# ncdc_stations(datasetid='GHCND', locationid='FIPS:12017', stationid='GHCND:USC00084289')
-
-# Little plot example
-out <- ncdc(
-    datasetid='GHCND', # Daily summaries dataset
-    stationid='GHCND:USC00190120', # dataset:stationid, this is Amherst, MA
-    datatypeid='TMAX', # can be PRCP (precipitation), TMAX, TMIN, or TAVG(sometimes)
-    startdate = '2020-01-01', 
-    enddate = '2020-12-31', 
-    limit = 500 # I think number of datapoints, but it is weird
-  )
-ncdc_plot(out, breaks="1 month", dateformat="%d/%m")
-# Temperatures are in 1/10 of a degree C, so TMAX = 300 means 30 C
-out
-```
-
-```{r weather-data}
-stations <-
-  ghcnd_stations(refresh = FALSE) %>%
-  filter(last_year == 2021 & str_detect(id, "US")) 
-# filter for stations still operating in 2021 and stations in the US
-# There are 136,293 stations meeting these criteria
-stations
-```
-
-# Join the Data
-
-<!-- -------------------------------------------------- -->
-
-```{r glimpse}
-df_pop %>% glimpse
-df_covid %>% glimpse
-```
-
-Use [FIPS county codes](https://en.wikipedia.org/wiki/FIPS_county_code) to join datasets. The last `5` digits of the `id` column in `df_pop` is the FIPS county code, while the NYT data `df_covid` already contains the `fips`.
-
-```{r q3-task}
-df_q3 <- 
+```{r normalize-covid-data}
+df_pop <- 
   df_pop %>%
   mutate("fips" = str_remove(id, "\\d+[:alpha:]+"))
-glimpse(df_q3)
-```
 
-Use the following test to check your answer.
-
-```{r q3-tests}
-## NOTE: No need to change this
-## Check known county
-assertthat::assert_that(
-              (df_q3 %>%
-              filter(str_detect(`Geographic Area Name`, "Autauga County")) %>%
-              pull(fips)) == "01001"
-            )
-print("Very good!")
-```
-
-### **q4** Join `df_covid` with `df_q3` by the `fips` column. Use the proper type of join to preserve *only* the rows in `df_covid`.
-
-```{r q4-task}
-## TASK: Join df_covid and df_q3 by fips.
-df_q4 <- 
+df_covid <- 
   df_covid %>%
-  inner_join(df_q3, by = "fips")
-glimpse(df_q4)
-```
+  left_join(df_pop, by = "fips")
 
-For convenience, I down-select some columns and produce more convenient column names.
-
-```{r rename}
-## NOTE: No need to change; run this to produce a more convenient tibble
-df_data <-
-  df_q4 %>%
+df_covid <-
+  df_covid %>%
   select(
     date,
     county,
@@ -186,101 +112,135 @@ df_data <-
     deaths,
     population = `Estimate!!Total`
   )
-glimpse(df_data)
+
+df_covid <-
+  df_covid %>%
+  mutate("cases_per100k" = (cases / population) * 100000) %>%
+  mutate("deaths_per100k" = (deaths / population) * 100000) %>%
+  ungroup()
+```
+
+### Weather Data
+
+Follow instructions linked [here](https://docs.ropensci.org/rnoaa/articles/rnoaa.html)
+
+```{r weather-data-setup}
+library('rnoaa')
+# Replace with your key from here: https://www.ncdc.noaa.gov/cdo-web/token
+# Remember to delete your actual API key before git pushing!
+# options(noaakey = "YOUR_API-KEY")
+options(noaakey = "NyqQflFurAAevqdjCxMUedSgCKwybJWj")
+```
+
+```{r weather-variables}
+# set some weather variables used to import data
+start_date <- '2020-01-01'
+end_date <- '2020-12-31'
+location_id <- 'FIPS:09009'
+lim <- 1000
+ideal <- 22
+```
+
+```{r weather-data}
+
+highs <- ncdc(
+    datasetid='GHCND', # Daily summaries dataset
+    locationid = location_id,
+    #stationid='GHCND:USC00190120', # dataset:stationid, this is Amherst, MA
+    datatypeid='TMAX', # can be PRCP (precipitation), TMAX, TMIN, or TAVG(sometimes)
+    startdate = start_date, 
+    enddate = end_date, 
+    limit = lim # I think number of datapoints, but it is weird
+  )
+lows <- ncdc(
+    datasetid='GHCND', # Daily summaries dataset
+    locationid = location_id,
+    #stationid='GHCND:USC00190120', # dataset:stationid, this is Amherst, MA
+    datatypeid='TMIN', # can be PRCP (precipitation), TMAX, TMIN, or TAVG(sometimes)
+    startdate = start_date, 
+    enddate = end_date, 
+    limit = lim # I think number of datapoints, but it is weird
+  )
+# Temperatures are in 1/10 of a degree C, so TMAX = 300 means 30 C
+combine <- ncdc_combine(highs, lows)
+
+df_weather <- combine$data
+  
+df_weather <- 
+  df_weather %>%
+  mutate(date = lubridate::ymd_hms(date)) %>% 
+  pivot_wider(
+    names_from = datatype,
+    values_from = value
+  ) %>%
+  group_by(date) %>%
+  mutate(
+    avg = mean((TMAX + TMIN) / 2) / 10, 
+    high = mean(TMAX) / 10,
+    low = mean(TMIN) / 10,
+    .keep = c("unused")
+  )
+  
+df_weather <-
+  df_weather[c("date", "avg", "high", "low")] %>%
+  distinct()
+df_weather
 ```
 
 # Analyze
 
 <!-- -------------------------------------------------- -->
 
-Now that we've done the hard work of loading and wrangling the data, we can finally start our analysis. Our first step will be to produce county population-normalized cases and death counts. Then we will explore the data.
+Plot Weather Data
 
-## Normalize
+```{r}
 
-<!-- ------------------------- -->
+df_weather %>%
+  mutate(comfy = ideal - max(c(abs(ideal - avg), abs(ideal - high)))) %>%
+  ggplot(aes(x = date)) +
+  geom_point(aes(y = high), color = "red", alpha = 0.1) +
+  geom_point(aes(y = low), color = "blue", alpha = 0.1) +
+  geom_point(aes(y = comfy), color = "black") 
 
-### **q5** Use the `population` estimates in `df_data` to normalize `cases` and `deaths` to produce per 100,000 counts [3]. Store these values in the columns `cases_per100k` and `deaths_per100k`.
-
-```{r q5-task}
-## TASK: Normalize cases and deaths
-df_normalized <-
-  df_data %>%
-  group_by(county) %>%
-  mutate("cases_per100k" = (cases / population) * 100000) %>%
-  mutate("deaths_per100k" = (deaths / population) * 100000) %>%
-  ungroup()
-
-glimpse(df_normalized)
 ```
 
-You may use the following test to check your work.
-
-```{r q5-tests}
-## NOTE: No need to change this
-## Check known county data
-if (any(df_normalized %>% pull(date) %>% str_detect(., "2020-01-21"))) {
-  assertthat::assert_that(TRUE)
-} else {
-  print(str_c(
-    "Date 2020-01-21 not found; did you download the historical data (correct),",
-    "or just the most recent data (incorrect)?",
-    sep = " "
-  ))
-  assertthat::assert_that(FALSE)
-}
-
-assertthat::assert_that(
-              abs(df_normalized %>%
-               filter(
-                 str_detect(county, "Snohomish"),
-                 date == "2020-01-21"
-               ) %>%
-              pull(cases_per100k) - 0.127) < 1e-3
-            )
-assertthat::assert_that(
-              abs(df_normalized %>%
-               filter(
-                 str_detect(county, "Snohomish"),
-                 date == "2020-01-21"
-               ) %>%
-              pull(deaths_per100k) - 0) < 1e-3
-            )
-
-print("Excellent!")
-```
-
-## EDA
-
-<!-- ------------------------- -->
-
-### Aside: Some visualization tricks
-
-<!-- ------------------------- -->
-
-These data get a little busy, so it's helpful to know a few `ggplot` tricks to help with the visualization. Here's an example focused on Massachusetts.
-
-```{r ma-example}
-## NOTE: No need to change this; just an example
-df_normalized %>%
-  filter(state == "Massachusetts") %>%
-
+```{r}
+df_covid %>%
+  filter(state == "Connecticut" & county == "Middlesex") %>%
+  mutate(delta_cases = cases_per100k - lag(cases_per100k)) %>%
+  filter(delta_cases > 0) %>%
   ggplot(
-    aes(date, cases_per100k, color = fct_reorder2(county, date, cases_per100k))
+    aes(date, delta_cases)
   ) +
   geom_line() +
-  scale_y_log10(labels = scales::label_number_si()) +
   scale_color_discrete(name = "County") +
   theme_minimal() +
   labs(
     x = "Date",
-    y = "Cases (per 100,000 persons)"
+    y = "New Cases/Day (per 100,000 persons)",
+    title = "New Cases Per Day"
   )
 ```
 
-*Tricks*:
+```{r}
+df_middlesex <-
+  df_covid %>%
+  filter(state == "Connecticut" & county == "Middlesex") %>%
+  left_join(df_weather, by = "date")
 
--   I use `fct_reorder2` to *re-order* the color labels such that the color in the legend on the right is ordered the same as the vertical order of rightmost points on the curves. This makes it easier to reference the legend.
--   I manually set the `name` of the color scale in order to avoid reporting the `fct_reorder2` call.
--   I use `scales::label_number_si` to make the vertical labels more readable.
--   I use `theme_minimal()` to clean up the theme a bit.
--   I use `labs()` to give manual labels.
+df_middlesex %>%
+  mutate(
+    comfy = ideal - max(c(abs(ideal - avg), abs(ideal - high))),
+    delta_cases = cases_per100k - lag(cases_per100k)
+  ) %>%
+  # filter(delta_cases > 0) %>%
+  ggplot(aes(x = date)) +
+  geom_smooth(aes(y = avg), color = "red") +
+  geom_smooth(aes(y = delta_cases)) +
+  # xlim("2020-03-18", "2020-10-18") +
+  scale_y_continuous(
+    name = "Temperature (C)",
+    # Add a second axis and specify its features
+    sec.axis = sec_axis(trans = ~.*10, name="Cases/day (avg)")
+  )
+```
